[120] fixed issues with finding dead code regions; refactorings